Cooker: Implement SoftGC - trigger a partial garbage collect when available physical memory reaches a schedule of targets. This significantly reduces the peak memory load of the cook commandlet for large projects, while adding only a small cost due to reloaded packages. In testing, the reload cost is so small that it is outweighed by time savings in various functions due to having a smaller number of UObjects loaded. #rb Zousar.Shaker [RN] Cooking, Minor #preflight 63c5c92f3f587d9e14a4c046
[CL 23733670 by matt peters in ue5-release-engine-staging branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -340,6 +340,12 @@ MaxConcurrentShaderJobs=8192
 MaxDiffsToLog=5
 IgnoreHeaderDiffs=True
 
+; SoftGC triggers a partial garbage collect when available physical memory on the machine reaches configured milestones
+; e.g. 5/10, 4/10, 3/10, 2/10, 1/10.
+bUseSoftGC=true
+SoftGCStartNumerator=5
+SoftGCDenominator=10
+
 ; CookProcessCount sets whether we cook singleprocess or multiprocess and how many processes there should be.
 ; CookProcessCount=(1 or less) is singleprocess. CookProcessCount=(N>1) is 1 director and N-1 cookworkers.
 CookProcessCount=1
