Split concert client code from concert server code to allow us to incorporate game tags in the editor client.
#rb dominik.peacock
#jira UE-168182
#preflight 63c6cf3c02024f93d8635de3

[CL 23741378 by jason walter in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Developer/Concert/ConcertMain/ConcertMain.uplugin
+++ b/Engine/Plugins/Developer/Concert/ConcertMain/ConcertMain.uplugin
@@ -24,6 +24,18 @@
 			"ProgramAllowList": [ "UnrealMultiUserServer", "UnrealMultiUserSlateServer", "UnrealRecoverySvc", "CrashReportClientEditor" ]
 		},
 		{
+			"Name": "ConcertClient",
+			"Type": "UncookedOnly",
+			"LoadingPhase": "PreDefault",
+			"ProgramDenyList": [ "UnrealMultiUserServer", "UnrealMultiUserSlateServer", "UnrealRecoverySvc", "CrashReportClientEditor" ]
+		},
+		{
+			"Name": "ConcertServer",
+			"Type": "UncookedOnly",
+			"LoadingPhase": "PreDefault",
+			"ProgramAllowList": [ "UnrealMultiUserServer", "UnrealMultiUserSlateServer", "UnrealRecoverySvc", "CrashReportClientEditor" ]
+		},
+		{
 			"Name": "ConcertTransport",
 			"Type": "UncookedOnly",
 			"LoadingPhase": "PreDefault",
