--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2875,7 +2875,7 @@ TargetArchitecture=MacTargetArchitectureUniversal
 EditorTargetArchitecture=MacTargetArchitectureUniversal
 EditorDefaultArchitecture=MacTargetArchitectureIntel
 DefaultArchitecture=MacTargetArchitectureIntel
-
+bEnableRayTracing=false
 
 [HMDPluginPriority]
 ; Since SteamVR also works with the Oculus Rift, give priority to the native Oculus plugin before trying SteamVR.
