--- a/Engine/Config/Mac/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Mac/DataDrivenPlatformInfo.ini
@@ -53,6 +53,12 @@ bSupports4ComponentUAVReadWrite=true
 bSupportsVolumeTextureAtomics=false
 bSupportsDualSourceBlending=true
 EnablesHLSL2021ByDefault=1
+bSupportsRayTracing = true
+bSupportsRayTracingShaders = false
+bSupportsInlineRayTracing = false
+bSupportsRayTracingIndirectInstanceData = true
+bSupportsByteBufferComputeShaders = true
+bSupportsHairStrandGeometry = false
 FriendlyName=LOCTEXT("FriendlyShaderPlatformName_MacSM5", "Mac Shader Model 5")
 
 [ShaderPlatform METAL_MRT_MAC]
