--- a/Engine/Config/Mac/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Mac/DataDrivenPlatformInfo.ini
@@ -53,10 +53,10 @@ bSupports4ComponentUAVReadWrite=true
 bSupportsVolumeTextureAtomics=false
 bSupportsDualSourceBlending=true
 EnablesHLSL2021ByDefault=1
-bSupportsRayTracing = true
+bSupportsRayTracing = false
 bSupportsRayTracingShaders = false
 bSupportsInlineRayTracing = false
-bSupportsRayTracingIndirectInstanceData = true
+bSupportsRayTracingIndirectInstanceData = false
 bSupportsByteBufferComputeShaders = true
 bSupportsHairStrandGeometry = false
 FriendlyName=LOCTEXT("FriendlyShaderPlatformName_MacSM5", "Mac Shader Model 5")
