[Navmesh] Addition of CellHeight in FNavMeshResolutionParam #jira none #rb Mieszko.Zielinski #preflight 63c8054102024f93d8c56415
[CL 23755500 by aris theophanidis in ue5-release-engine-staging branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2520,10 +2520,10 @@ DefaultDrawDistance=5000.0
 ; navmesh generation parameters
 TileSizeUU=1000.f
 CellSize=19.f
-NavMeshResolutionParams[0]=(CellSize=38.000000)
-NavMeshResolutionParams[1]=(CellSize=19.000000)
-NavMeshResolutionParams[2]=(CellSize=19.000000)
 CellHeight=10.f
+NavMeshResolutionParams[0]=(CellSize=38.000000,CellHeight=10.f)
+NavMeshResolutionParams[1]=(CellSize=19.000000,CellHeight=10.f)
+NavMeshResolutionParams[2]=(CellSize=19.000000,CellHeight=10.f)
 AgentRadius=34.f
 AgentHeight=144.f
 AgentMaxHeight=160.f
