--- a/Engine/Source/Programs/Horde/HordeDashboard/package.json
+++ b/Engine/Source/Programs/Horde/HordeDashboard/package.json
@@ -8,7 +8,7 @@
     "@blueprintjs/icons": "^3.13.0",
     "@datadog/browser-logs": "^4.30.0",
     "@fluentui/react": "^8.104.5",
-    "@fluentui/react-charting": "^5.14.36",
+    "@fluentui/react-charting": "5.2.0",
     "crypto-js": "^4.1.1",
     "d3": "^7.6.1",
     "idb": "^7.1.1",
