[bink] fixed build (was missing include). fix for using bink from UMG widgets, and for UMG widgets being able to call methods on Bink objects before StartupModule called. #jira UE-173574 #preflight 63c844d2d206f305131251e8
[CL 23761559 by jon olick in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Media/BinkMedia/BinkMedia.uplugin
+++ b/Engine/Plugins/Media/BinkMedia/BinkMedia.uplugin
@@ -18,7 +18,7 @@
 	[
 		{
 			"Name" : "BinkMediaPlayer",
-			"Type" : "RuntimeNoCommandlet",
+			"Type" : "Runtime",
 			"LoadingPhase" : "PreLoadingScreen",
 			"TargetDenyList": [ "Server" ],
 			"PlatformDenyList": [ 
