- Add a flag to data-driven shader platform information that denotes platform support for mesh shaders that support outputting SV_ClipDistance. - Disable Nanite mesh shader rasterization when r.AllowGlobalClipPlane=1 if the platform cannot support outputting the global clip plane clip distance from a mesh shader.
#rb rune.stubbe
#rnx
#preflight 63c95a34b0652247502cec7d

[CL 23773292 by jamie hayes in ue5-release-engine-staging branch]

--- a/Engine/Config/Windows/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Windows/DataDrivenPlatformInfo.ini
@@ -120,6 +120,7 @@ bSupportsVariableRateShading=true
 bSupportsGen5TemporalAA=true
 bSupportsMeshShadersTier0=true
 bSupportsMeshShadersTier1=true
+bSupportsMeshShadersWithClipDistance=true
 bSupportsHairStrandGeometry=true
 bSupportsFFTBloom=true
 bSupportsVertexShaderLayer=true
